@startuml

title __CONFIG's Class Diagram__\n

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class CsvConfig {
          - fileKey : String
          - csvKey : String
          - fieldDelimiter : String
          - rowDelimiter : String
          + CsvConfig()
          + createIO()
          + getKey()
          + getCsvKey()
          + getFileKey()
          + getFileConfig()
          + getFieldDelimiter()
          + getRowDelimiter()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          - csvKey : String
          - fileKey : String
          - fieldDelimiter : String
          - rowDelimiter : String
          + Builder()
          # prepare()
          + build()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      enum KEYS {
        fileKey
        csvKey
        fieldDelimiter
        rowDelimiter
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          # prepare()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          - mapPath : String
          # prepare()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class Builder {
          - module : String
          - subModule : String
          - path : String
          - mapPath : String
          - scope : List<Scope>
          - description : String
          - naturalId : String
          - id : Long
          - creationDate : Date
          - expanded : boolean
          + Builder()
          # prepare()
          # isExpanded()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.config {
      class CsvIO {
          - csvReader : CSVReader
          + CsvIO()
          + read()
          + write()
          + getCsvConfig()
          + reset()
          + close()
          + readRow()
          + readHead()
          + readRow()
          + write()
      }
    }
  }
  

  CsvConfig -up-|> ListConfig
  CsvConfig o-- FileConfig : fileConfig
  CsvConfig +-down- Builder
  CsvConfig +-down- KEYS
  CsvConfig +-down- Builder
  CsvConfig +-down- Builder
  CsvConfig +-down- Builder
  Builder -up-|> Builder
  Builder -up-|> Builder
  Builder o-- ListParams : listParams
  Builder o-- ListMapper : listMapper
  Builder -up-|> Builder
  Builder o-- RolePermissions : rolePermissions
  CsvIO -up-|> ListIOInterface
  CsvIO -up-|> ListIO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
